# AAR.-Org

./: .env.example  .gitignore  AGENTS.md  README.md  app.py  firebase-applet-config.json  firebase-blueprint.json  index.html  metadata.json  package-lock.json  package.json  pyproject.toml  requirements.txt  server.ts  setup_git.sh  vercel.json
api/: hello.py  index.py
src/: App.tsx  firebase.ts
